unpackaged/main/default/objects/ETT_Customer_Vehicle_Details__c/ETT_Customer_Vehicle_Details__c.object-meta.xml
<CustomObject>
    <label>Customer Vehicle Detail</label>
    <nameField>
        <displayFormat>Customer-VN-{000000}</displayFormat>
        <label>Customer Vehicle Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Vehicle Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>