unpackaged/main/default/objects/ETT_Customer_Vehicle_Details__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Vehicle Details</relationshipLabel>
    <relationshipName>Customer_Vehicle_Details</relationshipName>
    <type>Lookup</type>
</CustomField>