unpackaged/main/default/objects/ETT_Customer_Vehicle_Details__c/fields/ETT_Axil_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ETT_Axil_Configuration__c</fullName>
    <label>Axil Configuration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>