unpackaged/main/default/objects/ETT_Customer_Vehicle_Details__c/fields/ETT_KMS_Covered_Yearly__c.field-meta.xml
<CustomField>
    <fullName>ETT_KMS_Covered_Yearly__c</fullName>
    <label>KMS Covered Yearly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>