unpackaged/main/default/objects/ETT_Customer_Vehicle_Details__c/fields/ETT_Tyres_In_Fleet__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyres_In_Fleet__c</fullName>
    <label>Tyres In Fleet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>